# PEEV-verifiableFHE

./: .gitignore  CMakeLists.txt  Driver.cpp  Driver_eq_check.cpp  Driver_larger_params.cpp  Driver_larger_ptxt.cpp  README.md  code  example.cpp  example12.cpp  output  output2
depends/SEAL-Polytools/: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp
depends/SEAL-Polytools/include/: poly_arith.h
depends/SEAL-Polytools/src/: poly_arith.cpp
depends/SEAL-Polytools/test/: CMakeLists.txt  fhe_tests.cpp
depends/SEAL/dotnet/: SEALNet.sln.in
depends/SEAL/dotnet/examples/: 2_Encoders.cs  5_CKKS_Basics.cs  7_Serialization.cs
depends/SEAL/dotnet/src/: CKKSEncoder.cs
depends/SEAL/dotnet/tests/: BatchEncoderTests.cs  CKKSEncoderTests.cs  CiphertextTests.cs  EncryptorTests.cs  EvaluatorTests.cs  GaloisKeysTests.cs
docs/: index.html
opl/: chi_squared.opl  dot_product_v128.opl  dot_product_v16.opl  dot_product_v32.opl  dot_product_v64.opl  dot_product_v8.opl  euclidean_distance_v128.opl  euclidean_distance_v16.opl  euclidean_distance_v32.opl  euclidean_distance_v64.opl  euclidean_distance_v8.opl  factorial_v12.opl  factorial_v13.opl  factorial_v14.opl  factorial_v15.opl  factorial_v16.opl  factorial_v5.opl  factorial_v8.opl  fibonacci_v128.opl  fibonacci_v16.opl  fibonacci_v32.opl  fibonacci_v64.opl  fibonacci_v8.opl  hamming_distance_v16.opl  hamming_distance_v32.opl  hamming_distance_v4.opl  hamming_distance_v6.opl  hamming_distance_v8.opl  lr_v10.opl  lr_v4.opl  lr_v8.opl  mmul_2x2.opl  mmul_3x3.opl  mmul_4x4.opl  perceptron.opl  sum_sqrs_v12.opl  sum_sqrs_v16.opl  sum_sqrs_v32.opl  sum_sqrs_v5.opl  sum_sqrs_v64.opl  (+6 more)
ringsnark/: CMakeLists.txt
ringsnark/Circuit_tools/: Circuit.h  Initializer.h
ringsnark/seal/: seal_ring.hpp
